--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,6 +1,15 @@
 /* Give your page a fun background color */
-
+body {
+    background-color: yellowgreen;
+}
 /* Make the header and footer a different color from the background */
+header {
+    color: lightsalmon
+}
+
+footer {
+    color: lightsalmon
+}
 
 /* Align the h1 containing your name in the center of the header*/
 
