added border to image

--- a/assignment/style.css
+++ b/assignment/style.css
@@ -21,5 +21,7 @@ p {
     font-style: italic;
 }
 /* Put a border around your image */
-
+img {
+    border: 10px solid black
+}
 /* Change the font-family of your list */
